fix broken layout

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -21,9 +21,10 @@
   background-size: cover;
   height: 29px;
   width: 24px;
-  margin-right: 7px;
+  margin-right: 8px;
   margin-left: -4px;
 }
+
 
 @media (min-width: 520px) {
   .image {
