--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -2,7 +2,8 @@
   font-size: 14px;
   width: 94vw;
   max-width: 500px;
-  margin-top: 30px;
+  padding-top: 30px;
+  margin: auto;
 }
 
 .streamingsContainer {
